fix some layout issues

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,6 +6,7 @@
 
 #stackLine-logo {
     width: 13%;
+    min-width: 60px;
     min-height: 15px;
     max-height: 20px;
 }
